feat: Swagger doc updated
